loopdowhile.Poucet2.scala.code
var B:Int=0

do{
  do{
    avance()
		if(estSurBiscuit){
      B=B+1
    }
  }
  if(B>=3){
    gauche()
  }
  else{
    droite()
  }while(!crossing)
  B=0
}while(!sortieTrouvee)